# contour

./: .gitignore  ClearUnrealGlobalCache.ps1  ClearUnrealGlobalCache.txt  README.md  ideas.txt  launch_module_chat.txt  liveReloadCommand.txt  parts_list.txt  startUnreal.sh  suggestedPuttingStatsToTrack.txt  tensort.py
configs/: golf_ball_dataset.yaml
contour/: README.md  angular.json  package-lock.json  package.json  server.js
contour/src/: index.html
contour/src/app/: app.html  app.routes.ts  app.ts
contour/src/app/components/games/: games.component.css  games.component.html  games.component.ts
contour/src/app/components/green-view/: green-view.component.css  green-view.component.html  green-view.component.ts
contour/src/app/components/layout/: layout.component.css  layout.component.html  layout.component.ts
contour/src/app/services/: tracking.service.ts
cpp/: CMakeLists.txt  CMakeSettings.json
cpp/include/: frame_pipeline.h  putt_stats.h  stats_api.h  tracker.h  unreal_sender.h
cpp/src/: frame_pipeline.cpp  main.cpp  putt_stats.cpp  stats_api.cpp  tracker.cpp  unreal_sender.cpp
data/labels/: train.cache  val.cache
python/: Untitled  auto_label.py  detect_golf_ball.py  import_to_label_studio.py  iscudaAvailible.py
scripts/: build_cpp_windows.ps1  convert_onnx_to_trt.ps1  convert_onnx_to_trt.sh  update_label_studio.sh
ue/GolfSimUE/: BP_PlacementMarkerManager_Graph.html  GolfSimUE.uproject  README.md
ue/GolfSimUE/Config/: DefaultEngine.ini
ue/GolfSimUE/Content/: BP_DistanceMarker.uasset  BP_PlacementMarkerManager.uasset  BP_PuttMarker.uasset  BP_PuttPredictLine.uasset  BallOutline.uasset  BallToHoleLineActor_Blueprint.uasset  Ball_Blueprint.uasset  Circle.uasset  Hole_Blueprint.uasset  LandscapeStreamingProxy_0_0_0_Blueprint.uasset  M_BallOutline.uasset  M_BallToHoleLine.uasset  M_Green.uasset  M_HoleOutline.uasset  M_PlaceBallMarker.uasset  M_PuttStatsText.uasset  M_Putter.uasset  M_Stats.uasset  M_StatsMaterial.uasset  M_Trail.uasset  M_VirtualHole.uasset  Mesh_pointer.uasset  MyPuttMarkerWidget.uasset  NS_BallTrail.uasset  NewActorComponent.uasset  PlaceBallMarker.uasset  PlaceBallMarker_Blueprint.uasset  Putter.uasset  Putter_Blueprint.uasset  S_StatsBlueprint.uasset  StandLine.uasset  Untitled.umap  Untitled_HLOD0_Instancing.uasset  VirtualHole.uasset  VirtualHoleFilled.uasset  W_PuttMade.uasset  crosshair.uasset  crosshair_Blueprint.uasset
ue/GolfSimUE/Content/__ExternalActors__/Untitled/0/4P/: FVZCFAHYN261SLBGVKYLQ2.uasset
ue/GolfSimUE/Content/__ExternalActors__/Untitled/0/95/: 8WUYYCMXX15BI3ANA0HQL2.uasset
ue/GolfSimUE/Content/__ExternalActors__/Untitled/0/AC/: HOVTEE68G7VAJSFOUK370Q.uasset
ue/GolfSimUE/Content/__ExternalActors__/Untitled/0/BC/: U8A7EELOY8P7KI64DKFYDH.uasset
ue/GolfSimUE/Content/__ExternalActors__/Untitled/0/JR/: 96V7FEXIDQ6YRE9WCXTO3L.uasset
ue/GolfSimUE/Content/__ExternalActors__/Untitled/0/YK/: K6UPO231BY2JGT7QL36BEO.uasset
ue/GolfSimUE/Content/__ExternalActors__/Untitled/0/YU/: F0TLBT8IC78HOPED6QP9EN.uasset
ue/GolfSimUE/Content/__ExternalActors__/Untitled/1/16/: BFWQBLV6I27BBRHR1PJOLX.uasset
ue/GolfSimUE/Content/__ExternalActors__/Untitled/1/31/: YMWLVZUS39SZKKP6EY3D02.uasset
ue/GolfSimUE/Source/: GolfSimUE.Target.cs  GolfSimUEEditor.Target.cs
ue/GolfSimUE/Source/GolfSimUE/: BallToHoleLineActor.cpp  BallToHoleLineActor.h  BallTrailSplineActor.cpp  BallTrailSplineActor.h  GolfSimUE.Build.cs  GolfSimUE.cpp  PuttMarkerActor.cpp  PuttMarkerActor.h  UDPGolfReceiver.cpp  UDPGolfReceiver.h
(+99 files in other folders)
